--- a/scss/_b-reset.scss
+++ b/scss/_b-reset.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Suisse Int'l Mono";
+  src: url('../fonts/suisse-intl-mono.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
 html {
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
