--- a/scss/_l-footer.scss
+++ b/scss/_l-footer.scss
@@ -1,2 +1,24 @@
 .footer {
+  padding: 0 0 80px;
+
+  @include tablet {
+    padding-bottom: 40px;
+  }
+
+  &__copyright,
+  &__info {
+    font-family: "Suisse Int'l Mono", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #fff;
+    opacity: 0.3;
+
+    @include tablet {
+      font-size: 20px;
+    }
+  }
+
+  &__info {
+    margin-top: 20px;
+  }
 }
