feat: added contact-us

--- a/scss/_l-contact-us.scss
+++ b/scss/_l-contact-us.scss
@@ -1,2 +1,25 @@
 .contact-us {
+  &__title {
+    margin: 0;
+    font-family: 'Geist', sans-serif;
+    font-weight: 400;
+    font-size: 79px;
+    color: #f5f5f5;
+
+    @include tablet {
+      font-size: 40px;
+    }
+  }
+
+  &__email {
+    &-link {
+      font-weight: 400;
+      font-size: 79px;
+      color: #78f7a8;
+
+      @include tablet {
+        font-size: 40px;
+      }
+    }
+  }
 }
