--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 @font-face {
   font-family: "Suisse Int'l Mono";
   src: url("../fonts/suisse-intl-mono.ttf") format("truetype");
@@ -6,7 +7,7 @@
 }
 html {
   font-size: 16px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Geist", sans-serif;
   font-weight: 400;
   font-style: normal;
   scroll-behavior: smooth;
@@ -24,7 +25,7 @@ a,
 button,
 input,
 textarea {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Geist", sans-serif;
   text-decoration: none;
 }
 
@@ -44,6 +45,47 @@ img {
   padding: 0 32px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 200px;
+  padding: 200px 0;
+}
+@media (max-width: 768px) {
+  .main {
+    gap: 100px;
+    padding: 100px 0;
+  }
+}
+
+.contact-us__title {
+  margin: 0;
+  font-family: "Geist", sans-serif;
+  font-weight: 400;
+  font-size: 79px;
+  color: #f5f5f5;
+}
+@media (max-width: 768px) {
+  .contact-us__title {
+    font-size: 40px;
+  }
+}
+.contact-us__email-link {
+  font-weight: 400;
+  font-size: 79px;
+  color: #78f7a8;
+}
+@media (max-width: 768px) {
+  .contact-us__email-link {
+    font-size: 40px;
+  }
 }
 
 .footer {
