--- a/scss/_b-reset.scss
+++ b/scss/_b-reset.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+
 @font-face {
   font-family: "Suisse Int'l Mono";
   src: url('../fonts/suisse-intl-mono.ttf') format('truetype');
@@ -7,7 +9,7 @@
 
 html {
   font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Geist', sans-serif;
   font-weight: 400;
   font-style: normal;
   scroll-behavior: smooth;
@@ -25,7 +27,7 @@ a,
 button,
 input,
 textarea {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Geist', sans-serif;
   text-decoration: none;
 }
 
