--- a/scss/_l-main.scss
+++ b/scss/_l-main.scss
@@ -1,11 +1,15 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  gap: 200px;
-  padding: 200px 0;
+  padding: 100px 0;
 
   @include tablet {
-    gap: 100px;
+    padding: 50px 0;
+  }
+
+  & > * {
     padding: 100px 0;
+
+    @include tablet {
+      padding: 50px 0;
+    }
   }
 }
