--- a/scss/_l-secure-internet.scss
+++ b/scss/_l-secure-internet.scss
@@ -1,2 +1,84 @@
 .secure-internet {
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    gap: 90px;
+
+    @include laptop {
+      gap: 40px;
+    }
+
+    @include tablet {
+      flex-wrap: wrap;
+    }
+  }
+
+  &__figure {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
+
+    @include tablet {
+      flex: 1 1 100%;
+    }
+
+    &-image {
+      display: block;
+      max-width: 100%;
+      width: 220px;
+      height: auto;
+
+      @include tablet {
+        width: 193px;
+      }
+    }
+  }
+
+  &__info {
+    flex: 0 1 642px;
+
+    @include tablet {
+      flex: 1 1 100%;
+    }
+
+    &-title,
+    &-subtitle {
+      margin: 0;
+      font-family: 'Geist', sans-serif;
+      font-weight: 400;
+      font-size: 80px;
+      color: #78f7a8;
+
+      @include laptop {
+        font-size: 64px;
+      }
+
+      @include tablet {
+        font-size: 50px;
+      }
+    }
+
+    &-title {
+      color: #78f7a8;
+    }
+
+    &-subtitle {
+      color: #f5f5f5;
+    }
+
+    &-description {
+      margin: 40px 0 0;
+      font-family: "Suisse Int'l Mono", sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 160%;
+      color: #f5f5f5;
+
+      @include tablet {
+        margin-top: 20px;
+        font-size: 20px;
+      }
+    }
+  }
 }
