--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,55 @@ img {
           box-sizing: border-box;
 }
 
+.header {
+  padding: 80px 0 0;
+}
+.header__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 40px;
+}
+.header__logo {
+  display: inline-block;
+}
+.header__logo-link {
+  font-family: "Suisse Int'l Mono", sans-serif;
+  font-weight: 400;
+  font-size: 32px;
+  color: #78f7a8;
+}
+.header__menu {
+  margin: 10px 0 0;
+}
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 16px;
+  padding: 0 40px;
+}
+.header__nav-link {
+  display: inline-block;
+  padding: 0px 4px;
+  font-family: "Suisse Int'l Mono", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  color: #78f7a8;
+  background-color: #212a24;
+}
+.header__contacts {
+  display: none;
+}
+
 .main {
   padding: 100px 0;
 }
