--- a/scss/_l-header.scss
+++ b/scss/_l-header.scss
@@ -1,2 +1,46 @@
 .header {
+  padding: 80px 0 0;
+
+  &__main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+  }
+
+  &__logo {
+    display: inline-block;
+
+    &-link {
+      font-family: "Suisse Int'l Mono", sans-serif;
+      font-weight: 400;
+      font-size: 32px;
+      color: #78f7a8;
+    }
+  }
+
+  &__menu {
+    margin: 10px 0 0;
+  }
+
+  &__nav {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    padding: 0 40px;
+
+    &-link {
+      display: inline-block;
+      padding: 0px 4px;
+      font-family: "Suisse Int'l Mono", sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+      color: #78f7a8;
+      background-color: #212a24;
+    }
+  }
+
+  &__contacts {
+    display: none;
+  }
 }
