--- a/scss/_b-reset.scss
+++ b/scss/_b-reset.scss
@@ -21,6 +21,12 @@ body {
   overflow-y: scroll;
   color: #ffffff;
   background-color: #101112;
+
+  &.hidden {
+    @include tablet {
+      overflow: hidden;
+    }
+  }
 }
 
 a,
