--- a/css/index.css
+++ b/css/index.css
@@ -779,6 +779,114 @@ img {
   }
 }
 
+.privacy-policy__title {
+  font-family: "Geist", sans-serif;
+  margin: 0 0 32px;
+  font-weight: 400;
+  font-size: 32px;
+  color: #f5f5f5;
+}
+.privacy-policy__wrapper {
+  position: relative;
+  padding-right: 140px;
+}
+@media (max-width: 1024px) {
+  .privacy-policy__wrapper {
+    padding-right: 0;
+  }
+}
+.privacy-policy__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: -20px;
+}
+.privacy-policy__card:first-child {
+  margin-top: 0;
+}
+.privacy-policy__card:nth-child(odd) {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.privacy-policy__card:nth-child(even) {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.privacy-policy__card:last-child {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  max-width: 254px;
+}
+@media (max-width: 1024px) {
+  .privacy-policy__card:last-child {
+    position: static;
+    max-width: 360px;
+  }
+}
+@media (max-width: 768px) {
+  .privacy-policy__card:last-child {
+    max-width: 254px;
+  }
+}
+.privacy-policy__card-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  max-width: 568px;
+  padding: 24px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 3px solid #101112;
+  background-color: #212a24;
+}
+@media (max-width: 768px) {
+  .privacy-policy__card-content {
+    max-width: calc(100% - 32px);
+    width: 480px;
+  }
+}
+@media (max-width: 576px) {
+  .privacy-policy__card-content {
+    max-width: calc(100% - 32px);
+    width: 346px;
+  }
+}
+.privacy-policy__card-id {
+  font-family: "Suisse Int'l Mono", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: #78f7a8;
+}
+@media (max-width: 768px) {
+  .privacy-policy__card-id {
+    font-size: 16px;
+  }
+}
+.privacy-policy__card-text {
+  font-family: "Suisse Int'l Mono", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #f5f5f5;
+}
+@media (max-width: 768px) {
+  .privacy-policy__card-text {
+    font-size: 16px;
+  }
+}
+.privacy-policy__card-text-main {
+  color: #78f7a8;
+}
+
 .contact-us__title {
   margin: 0;
   font-family: "Geist", sans-serif;
